# agv-pipeline-lab

./: .gitignore  README.md
agv_super_launcher/: agv_health_monitor.sh  agv_health_monitor_v2.sh  mega_super_launcher_host.sh  mega_super_launcher_host.sh.pgid_candidate  mega_super_launcher_host.sh.pgid_candidate_v2  mega_super_launcher_host_stable_v1.sh  mega_super_launcher_host_x86.sh  mega_super_launcher_v2.sh  ros_agv_serial_inspect.json
agv_super_launcher/watchdog/: agv_host_watchdog.sh  agv_watchdog.sh
docs/runtime_audits/: 00_host_overview.txt  01_docker_and_container.txt  02_devices_and_udev.txt  03_ros_workspace.txt  04_launcher_and_watchdogs.txt  05_runtime_assembly.txt  06_core_runtime_nodes.txt  07_runtime_ros_graph.txt  08_runtime_health.txt  08_topic_rates.txt  09_runtime_health.txt  10_live_processes.txt  11_logs_and_runtime_share.txt
src/agv_bringup/: package.xml
src/agv_bringup/launch/: system_nav2_slam.launch.py
src/esp32_bridge_node/: package.xml  setup.cfg  setup.py
src/esp32_bridge_node/esp32_bridge_node/: esp32_bridge_node.py
src/odom_node/: package.xml  setup.cfg  setup.py
src/odom_node/odom_node/: odom_node.py
